# hyperopt-recipes

./: Makefile  README.md  pyproject.toml
hyperec/: simple.py  sklearn_cross_validation.py  trials_and_multi_losses.py
